fix the text box alignment in section 4 and section 5

--- a/css/style.css
+++ b/css/style.css
@@ -223,7 +223,7 @@ thead {
 .register-section {
   display: flex;
   justify-content: space-between;
-  align-items: flex-start; /* Align items to the top of the container */
+  align-items: stretch; /* Align items to the top of the container */
   width: 100%;
   background-color: rgb(120, 24, 24);
   padding: 20px;
@@ -247,7 +247,7 @@ thead {
 .register-form input, 
 .register-form textarea {
   display: block;
-  width: 90%;
+  width: 100%;
   margin-bottom: 10px;
   padding: 8px;
   border: 1px solid #ccc;
